감사합니다

--- a/Java Project/bin/.gitignore
+++ b/Java Project/bin/.gitignore
@@ -1,3 +1,13 @@
 /sample_0324/
 /sample_0407/
 /sample_0414/
+/중간평가1.class
+/midtest2.class
+/User.class
+/Process.class
+/Print.class
+/Project.class
+/User_class.class
+/Pr_class.class
+/Pt_class.class
+/sample_0428/
